--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Alpha2 
  	- Fixed a session fixation issue
  	- Fixed Album Disk support for OGG's and added display to browse
		albums
  	- Added Album Disk support for id3v2 (Thx Hugo Haas)
  	- Updated LastFM pluging, must uninstall/reinstall to make it work
		will add in auto-update later
  	- Adjusted LastFM reporting to reduce lag betwen songs. You must
		now currently be logged in for LastFM to report correctly
  	- Fixed a potential PHP error when browsing the last page or a 
		search with 0 results
  	- Fixed rating search method
  	- Added 'Buy This Track' link on Find Missing Tracks if a purchase
		url is given in the returned data
  	- Reduced # of pages at any one point on browse pages and tweaked
		their display, and fixed the bottom paging stuff
  	- Massive improvement to sidebar (Thx Spocky) 
	- Added default sort order for Song Titles, Albums & Artists
		has a dbl sort bug, leaving it in until true sorting
		is in so you can click twice to invert sort
  	- Added Find Missing tracks, requires MyStrands
  	- Added ability to show Album art on Browse -> Albums
  	- Added Similar Artists Link, requires MyStrands
  	- Fixed hovering on the static Ratings displays
  	- Added MyStrands Plugin, must be enabled under Plugins
  	- Re-enabled / updated Plugin functionality
  	- Fixed CSS (Thx Spocky) 
  	- Added Playlists as a browse type and fixed playback
  	- Fixed an issue where albums of the moment would show when you 
		had 0 albums
  	- Fixed warnings on Update & typo in Install
  	- Removed redundent GPL licence file
  	- Fixed filesize() issue on config re-gen
  	- Fixed an issue with seeking causing incorrect stats counts 