@@ -23,6 +23,10 @@
  * DO NOT EDIT THIS FILE 
  ***/
 
+// Use output buffering, this gains us a few things and 
+// fixes some CSS issues
+ob_start();
+
 // Set the Error level manualy... I'm to lazy to fix notices
 error_reporting(E_ALL ^ E_NOTICE);
 
